<resources>
	<string name="app_name">Errand</string>
	<string name="default_notification_channel_id" translatable="false">9s8hrf7hf2uh7</string>
	<string name="default_notification_channel_name" translatable="false">Errand</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="action_run_start">Start running</string>
	<string name="action_run_stop">Stop running</string>
	<string name="generic_loading">Loading…</string>
	<string name="generic_ok" translatable="false">OK</string>
	<string name="generic_yes">Yes</string>
	<string name="generic_no">No</string>
	<string name="generic_save">Save</string>
	<string name="generic_cancel">Cancel</string>
	<string name="generic_close">Close</string>
	<string name="generic_success">Success</string>
	<string name="generic_enabled">Enabled</string>
	<string name="generic_disabled">Disabled</string>
	<string name="generic_active">Active</string>
	<string name="generic_inactive">Inactive</string>
	<string name="generic_select">Select</string>
	<string name="generic_deselect">Deselect</string>
	<string name="generic_unrated">Unrated</string>
	<string name="generic_search">Search</string>
	<string name="generic_rate">Rate</string>
	<string name="generic_complete">Successfully end</string>
	<string name="generic_start">Start</string>
	<string name="autofill_email" translatable="false">emailAddress</string>
	<string name="autofill_password" translatable="false">password</string>
	<string name="autofill_new_password" translatable="false">newPassword</string>
	<string name="autofill_name" translatable="false">personGivenName</string>
	<string name="autofill_lastname" translatable="false">personFamilyName</string>
	<string name="autofill_address" translatable="false">postalAddress</string>
	<string name="autofill_phone" translatable="false">phone</string>
	<string name="login_email">Email</string>
	<string name="login_pass">Password</string>
	<string name="login_pass_r">Repeat password</string>
	<string name="login_name">First Name</string>
	<string name="login_lastname">Last Name</string>
	<string name="login_address">Address</string>
	<string name="login_phone">Phone</string>
	<string name="login_email_hint">" Email Address"</string>
	<string name="login_pass_hint">" Password"</string>
	<string name="login_name_hint">" First Name"</string>
	<string name="login_lastname_hint">" Last Name"</string>
	<string name="login_address_hint">" Home Address"</string>
	<string name="login_phone_hint">" Phone Number"</string>
	<string name="login_in">Sign in</string>
	<string name="sign_up">Sign up</string>
	<string name="login_up_btn"><u>Sign up</u></string>
	<string name="login_up_text">"Don't have an account? "</string>
	<string name="login_in_btn"><u>Sign in</u></string>
	<string name="login_in_text">"Already have an account? "</string>
	<string name="menu_requests">Requests</string>
	<string name="menu_new">New request</string>
	<string name="menu_find">Find requests</string>
	<string name="menu_notifications">Notifications</string>
	<string name="menu_profile">Profile</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_logout">Sign out</string>
	<string name="requests_tab_requested">Requested</string>
	<string name="requests_tab_running">Running</string>
	<string name="requests_tab_history">History</string>
	<string name="no_requests">You don\'t have any requests in this category.</string>
	<string name="profile_tab_info">Info</string>
	<string name="profile_tab_ratings">Ratings</string>
	<string name="profile_tab_achievements">Achievements</string>
	<string name="profile_info_name">First Name</string>
	<string name="profile_info_name_hint">" First Name"</string>
	<string name="profile_info_lastname">Last Name</string>
	<string name="profile_info_lastname_hint">" Last Name"</string>
	<string name="profile_info_email">Email</string>
	<string name="profile_info_email_hint">" Email"</string>
	<string name="profile_info_phone">Phone</string>
	<string name="profile_info_phone_hint">" Phone"</string>
	<string name="profile_info_address">Address</string>
	<string name="profile_info_address_hint">" Address"</string>
	<string name="profile_info_address_add">Add a new address</string>
	<string name="profile_info_rating">Rating</string>
	<string name="profile_info_rating_hint">" Rating"</string>
	<string name="profile_info_achievement">Achievements</string>
	<string name="profile_info_achievement_hint">" Achievements"</string>
	<string name="no_achievements">There are no achievements available.</string>
	<string name="no_ratings">You don\'t have any ratings yet.</string>
	<string name="picture_required">Picture required</string>
	<string name="request_tab_info">Info</string>
	<string name="request_tab_map">Map</string>
	<string name="request_tab_send_offer">Send Offer</string>
	<string name="request_tab_view_offers">View Offers</string>
	<string name="request_tab_status">Status</string>
	<string name="request_tab_offers">Offers</string>
	<string name="request_info_name">Name</string>
	<string name="request_info_name_hint">" Name"</string>
	<string name="request_info_note">Note</string>
	<string name="request_info_note_hint">" Note"</string>
	<string name="request_info_service">Service</string>
	<string name="request_info_service_hint">" Service"</string>
	<string name="request_info_picture_saved">Picture successfully saved to local storage.</string>
	<string name="request_send_offer_created_by">Created by:</string>
	<string name="request_send_offer_direct_request">Direct:</string>
	<string name="request_send_offer_running">Running:</string>
	<string name="request_send_offer_offer">Offer:</string>
	<string name="request_send_offer_edit">Request a change:</string>
	<string name="request_send_offer_reset_edit">Reset changes</string>
	<string name="request_send_offer_request_edit">Request changes</string>
	<string name="request_send_offer_picture">Upload picture</string>
	<string name="request_send_offer_send">Send offer</string>
	<string name="request_offer_item_payment">"Payment: "</string>
	<string name="request_send_offer_offer_by">Offer by:</string>
	<string name="request_send_offer_edit_request">Edit request:</string>
	<string name="request_offer_accept">Accept offer</string>
	<string name="request_offer_reject">Reject offer</string>
	<string name="request_offer_reject_desc">Do you really want to reject this offer?</string>
	<string name="no_offers">You don\'t have any offers yet.</string>
	<string name="offer_sent">Offer successfully sent.</string>
	<string name="marked_as_finished">has marked the request as completed.</string>
	<string name="request_complete">Complete</string>
	<string name="request_complete_desc">You can\'t undo this action. Do you really want to mark this request as complete? It will be completed once everyone has marked it as complete.</string>
	<string name="request_cancel">Cancel</string>
	<string name="request_cancel_desc">You can\'t undo this action. Do you really want to cancel this request? It will immediately canceled.</string>
	<string name="rate_comment">Comment</string>
	<string name="request_status_total">Total:</string>
	<string name="request_status_edit">Edits:</string>
	<string name="edit_accept">Accept edit</string>
	<string name="edit_accept_desc">Do you really want to accept this edit request?</string>
	<string name="edit_reject">Reject edit</string>
	<string name="edit_reject_desc">Do you really want to reject this edit request?</string>
	<string name="edit_cancel">Cancel edit</string>
	<string name="edit_cancel_desc">Do you really want to cancel this edit request?</string>
	<string name="select_task">Related task</string>
	<string name="create_edit_request">Create an edit request</string>
	<string name="chooser_email">Send Email</string>
	<string name="newrequest_tab_info">Info</string>
	<string name="newrequest_tab_tasks">Tasks</string>
	<string name="newrequest_tab_offers">Offers</string>
	<string name="newrequest_info_name">Name</string>
	<string name="newrequest_info_name_hint">" Name"</string>
	<string name="newrequest_info_note">Note</string>
	<string name="newrequest_info_note_hint">" Note"</string>
	<string name="newrequest_info_time">Time</string>
	<string name="newrequest_info_date">Date</string>
	<string name="newrequest_info_max_distance">Max distance</string>
	<string name="newrequest_info_max_distance_hint">" Maximum distance"</string>
	<string name="newrequest_info_max_distance_info">Maximum distance (in kilometers) of a Runner from the addresses specified in this request that can send you offers for this request.</string>
	<string name="newrequest_info_min_rating">Min rating</string>
	<string name="newrequest_info_min_rating_hint">" Minimum rating"</string>
	<string name="newrequest_info_min_rating_info">Minimum rating of a Runner that can send offers for this request.</string>
	<string name="newrequest_info_destination">Destination</string>
	<string name="newrequest_task_service">Service</string>
	<string name="newrequest_task_service_hint">" Service"</string>
	<string name="newrequest_task_service_default">Select a service</string>
	<string name="newrequest_task_title">Title</string>
	<string name="newrequest_task_title_hint">" Title"</string>
	<string name="newrequest_task_description">Description</string>
	<string name="newrequest_task_description_hint">" Description"</string>
	<string name="newrequest_task_checklist">Checklist</string>
	<string name="newrequest_task_checklist_hint">" Checklist"</string>
	<string name="newrequest_task_checklist_info">You can add a checklist by putting each item in a new row.</string>
	<string name="newrequest_task_address">Address</string>
	<string name="newrequest_task_address_hint">" Address"</string>
	<string name="newrequest_task_address_default">Select an address</string>
	<string name="newrequest_task_address_other">Other</string>
	<string name="newrequest_task_address_other_desc">Choose an address that isn\'t saved to your account.</string>
	<string name="newrequest_offers_broadcast" translatable="false">Broadcast</string>
	<string name="newrequest_offers_broadcast_hint" translatable="false">" Broadcast"</string>
	<string name="newrequest_offers_broadcast_info">Broadcasting requests will allow others to see them and send you offers.</string>
	<string name="newrequest_offers_direct_info">You can send requests directly to Runners you prefer, they\'ll be notified and able to send you an offer.</string>
	<string name="newrequest_offers_direct_add" translatable="false">Add a Runner</string>
	<string name="newrequest_offers_direct_active_only">Active only</string>
	<string name="newrequest_offers_direct_sort_by">Sort by</string>
	<string name="newrequest_offers_direct_sort_by_rating">Rating</string>
	<string name="newrequest_offers_direct_sort_by_disctance">Distance</string>
	<string name="newrequest_offers_no_direct_users">There are no available users.</string>
	<string name="find_requests_tab_filter">Filter</string>
	<string name="find_requests_tab_broadcast" translatable="false">Broadcast</string>
	<string name="find_requests_tab_direct">Direct</string>
	<string name="find_requests_filter_max_dist">"Your account has to active in order to find requests.

Max distance from your current location to request addresses in kilometers."</string>
	<string name="find_requests_service_filter_desc">Here you can filter by services present in the request. Having no services added to the filter will show all requests regardless of services specified in them.</string>
	<string name="find_requests_service_filter_add">Add service</string>
	<string name="notifications_tab_requested">Requested</string>
	<string name="notifications_tab_running">Running</string>
	<string name="notifications_tab_other">Other</string>
	<string name="no_notifications">You don\'t have any notifications in this category.</string>
</resources>