<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:showIn="navigation_view">

	<group android:checkableBehavior="single">
		<item
			android:id="@+id/nav_page_requests"
			android:icon="@drawable/ic_list"
			android:title="@string/menu_requests" />
		<item
			android:id="@+id/nav_page_newrequest"
			android:icon="@drawable/ic_add"
			android:title="@string/menu_new" />
		<item
			android:id="@+id/nav_page_findrequests"
			android:icon="@drawable/ic_find"
			android:title="@string/menu_find" />
		<item
			android:id="@+id/nav_page_notifications"
			android:icon="@drawable/ic_notifications"
			android:title="@string/menu_notifications" />
		<item
			android:id="@+id/nav_page_profile"
			android:icon="@drawable/ic_profile_dark"
			android:title="@string/menu_profile" />
		<item
			android:id="@+id/nav_page_settings"
			android:icon="@drawable/ic_settings"
			android:title="@string/menu_settings" />
		<item
			android:id="@+id/nav_page_logout"
			android:icon="@drawable/ic_logout"
			android:title="@string/menu_logout" />
	</group>
</menu>
