<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:background="@color/colorWhite"
	tools:context=".ui.newrequest.NR3Fragment">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			android:id="@+id/page_title"
			android:text="@string/newrequest_tab_offers"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="@style/TextView.Header"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="12dp"
			android:layout_marginBottom="4dp"
			android:paddingHorizontal="16dp"
			android:text="@string/newrequest_offers_broadcast_info"
			android:textSize="@dimen/text_small"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="28dp"
			android:layout_marginHorizontal="8dp"
			android:orientation="horizontal"
			android:background="@drawable/edit_text_login">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				style="@style/TextView.Service"
				android:layout_marginStart="8dp"
				android:layout_marginLeft="8dp"
				android:text="@string/newrequest_offers_broadcast"/>

			<EditText
				android:id="@+id/newrequest_offers_broadcast"
				android:hint="@string/newrequest_offers_broadcast_hint"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:enabled="false"
				android:text="@string/generic_enabled"
				style="@style/EditText.Login"
				android:paddingStart="8dp"
				android:paddingEnd="8dp"
				android:importantForAutofill="no"
				android:inputType="text" />
		</LinearLayout>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="12dp"
			android:layout_marginBottom="4dp"
			android:paddingHorizontal="16dp"
			android:text="@string/newrequest_offers_direct_info"
			android:textSize="@dimen/text_small"/>

		<LinearLayout
			android:id="@+id/newrequest_offers_direct_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"/>

		<TextView
			android:id="@+id/newrequest_offers_direct_add"
			android:layout_width="wrap_content"
			android:layout_marginTop="4dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/newrequest_offers_direct_add"
			android:gravity="center_vertical"
			android:textColor="@color/colorBlack"
			android:drawableStart="@drawable/ic_add"
			android:drawableLeft="@drawable/ic_add" />
	</LinearLayout>
</ScrollView>