<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".LoginActivity"
	android:background="@drawable/app_bar_gradient">

	<ImageView
		android:visibility="invisible"
		android:id="@+id/login_app_icon"
		app:layout_constraintTop_toTopOf="parent"
		android:layout_marginTop="64dp"
		android:layout_width="match_parent"
		android:layout_height="64dp"
		android:src="@drawable/ic_run"
		android:contentDescription="@string/app_name" />

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		app:layout_constraintTop_toBottomOf="@id/login_app_icon"
		app:layout_constraintBottom_toBottomOf="parent"
		android:paddingHorizontal="16dp"
		android:paddingBottom="16dp"
		android:animateLayoutChanges="true">

		<LinearLayout
			android:visibility="gone"
			android:id="@+id/login_layout_center_in"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:gravity="center">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="28dp"
				android:layout_marginBottom="12dp"
				android:orientation="horizontal"
				android:background="@drawable/edit_text_login">

				<TextView
					android:id="@+id/profile_name_label"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/TextView.Service"
					android:layout_marginStart="8dp"
					android:layout_marginLeft="8dp"
					android:text="@string/login_email"/>

				<EditText
					android:id="@+id/login_email"
					android:hint="@string/login_email_hint"
					android:autofillHints="@string/autofill_email"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:inputType="textEmailAddress"
					android:layout_weight="1"
					style="@style/EditText.Login"
					android:paddingStart="8dp"
					android:paddingEnd="8dp"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="28dp"
				android:layout_marginBottom="12dp"
				android:orientation="horizontal"
				android:background="@drawable/edit_text_login">

				<TextView
					android:id="@+id/login_label_pass"
					android:text="@string/login_pass"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/TextView.Service"
					android:layout_marginStart="8dp"
					android:layout_marginLeft="8dp"/>

				<EditText
					android:id="@+id/login_pass"
					android:hint="@string/login_pass_hint"
					android:autofillHints="@string/autofill_password"
					android:inputType="textPassword"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					style="@style/EditText.Login"
					android:paddingStart="8dp"
					android:paddingEnd="8dp"/>

				<androidx.appcompat.widget.AppCompatImageView
					android:id="@+id/login_hide_pass"
					android:layout_width="27dp"
					android:layout_height="32dp"
					android:paddingEnd="5dp"
					android:paddingRight="5dp"
					android:layout_weight="0"
					tools:ignore="RtlSymmetry"
					android:src="@drawable/ic_show_pass"
					android:layout_gravity="center_vertical|end" />
			</LinearLayout>

			<FrameLayout
				android:animateLayoutChanges="true"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<Button
					android:id="@+id/login"
					android:background="@null"
					style="?android:attr/borderlessButtonStyle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:textColor="@color/colorLightGrey"
					android:text="@string/login_in"/>

				<ProgressBar
					android:id="@+id/login_progress"
					android:visibility="invisible"
					android:layout_width="match_parent"
					android:layout_height="match_parent" />
			</FrameLayout>
		</LinearLayout>

		<LinearLayout
			android:visibility="gone"
			android:id="@+id/login_layout_bottom_in"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom"
			android:orientation="horizontal"
			android:gravity="center_horizontal">

			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/login_up_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/colorLightGrey"
				android:text="@string/login_up_text"/>

			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/login_up_btn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/colorLightGrey"
				android:text="@string/login_up_btn"/>
		</LinearLayout>

		<LinearLayout
			android:visibility="gone"
			android:id="@+id/login_layout_center_up"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:gravity="center">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="28dp"
				android:layout_marginBottom="12dp"
				android:orientation="horizontal"
				android:background="@drawable/edit_text_login">

				<TextView
					android:id="@+id/sign_up_label_email"
					android:text="@string/login_email"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/TextView.Service"
					android:layout_marginStart="8dp"
					android:layout_marginLeft="8dp"/>

				<EditText
					android:id="@+id/sign_up_email"
					android:hint="@string/login_email_hint"
					android:autofillHints="@string/autofill_email"
					android:inputType="textEmailAddress"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					style="@style/EditText.Login"
					android:paddingStart="8dp"
					android:paddingEnd="8dp"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="28dp"
				android:layout_marginBottom="12dp"
				android:orientation="horizontal"
				android:background="@drawable/edit_text_login">

				<TextView
					android:id="@+id/sign_up_label_pass"
					android:text="@string/login_pass"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/TextView.Service"
					android:layout_marginStart="8dp"
					android:layout_marginLeft="8dp"/>

				<EditText
					android:id="@+id/sign_up_pass"
					android:hint="@string/login_pass_hint"
					android:autofillHints="@string/autofill_new_password"
					android:inputType="textPassword"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					style="@style/EditText.Login"
					android:paddingStart="8dp"
					android:paddingEnd="8dp"/>

				<androidx.appcompat.widget.AppCompatImageView
					android:id="@+id/sign_up_hide_pass"
					android:layout_width="27dp"
					android:layout_height="32dp"
					android:paddingEnd="5dp"
					android:paddingRight="5dp"
					android:layout_weight="0"
					tools:ignore="RtlSymmetry"
					android:src="@drawable/ic_show_pass"
					android:layout_gravity="center_vertical|end" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="28dp"
				android:layout_marginBottom="12dp"
				android:orientation="horizontal"
				android:background="@drawable/edit_text_login">

				<TextView
					android:id="@+id/sign_up_label_pass_r"
					android:text="@string/login_pass_r"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/TextView.Service"
					android:layout_marginStart="8dp"
					android:layout_marginLeft="8dp"/>

				<EditText
					android:id="@+id/sign_up_pass_r"
					android:hint="@string/login_pass_hint"
					android:autofillHints="@string/autofill_new_password"
					android:inputType="textPassword"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					style="@style/EditText.Login"
					android:paddingStart="8dp"
					android:paddingEnd="8dp"/>

				<androidx.appcompat.widget.AppCompatImageView
					android:id="@+id/sign_up_hide_pass_r"
					android:layout_width="27dp"
					android:layout_height="32dp"
					android:paddingEnd="5dp"
					android:paddingRight="5dp"
					android:layout_weight="0"
					tools:ignore="RtlSymmetry"
					android:src="@drawable/ic_show_pass"
					android:layout_gravity="center_vertical|end" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="28dp"
				android:layout_marginBottom="12dp"
				android:orientation="horizontal"
				android:background="@drawable/edit_text_login">

				<TextView
					android:id="@+id/sign_up_label_name"
					android:text="@string/login_name"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/TextView.Service"
					android:layout_marginStart="8dp"
					android:layout_marginLeft="8dp"/>

				<EditText
					android:id="@+id/sign_up_name"
					android:hint="@string/login_name_hint"
					android:autofillHints="@string/autofill_name"
					android:inputType="textPersonName"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					style="@style/EditText.Login"
					android:paddingStart="8dp"
					android:paddingEnd="8dp"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="28dp"
				android:layout_marginBottom="12dp"
				android:orientation="horizontal"
				android:background="@drawable/edit_text_login">

				<TextView
					android:id="@+id/sign_up_label_lastname"
					android:text="@string/login_lastname"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/TextView.Service"
					android:layout_marginStart="8dp"
					android:layout_marginLeft="8dp"/>

				<EditText
					android:id="@+id/sign_up_lastname"
					android:hint="@string/login_lastname_hint"
					android:autofillHints="@string/autofill_lastname"
					android:inputType="textPersonName"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					style="@style/EditText.Login"
					android:paddingStart="8dp"
					android:paddingEnd="8dp"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="28dp"
				android:layout_marginBottom="12dp"
				android:orientation="horizontal"
				android:visibility="gone"
				android:background="@drawable/edit_text_login">

				<TextView
					android:id="@+id/sign_up_label_address"
					android:text="@string/login_address"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/TextView.Service"
					android:layout_marginStart="8dp"
					android:layout_marginLeft="8dp" />

				<EditText
					android:id="@+id/sign_up_address"
					android:hint="@string/login_address_hint"
					android:autofillHints="@string/autofill_address"
					android:inputType="textPostalAddress"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					style="@style/EditText.Login"
					android:paddingStart="8dp"
					android:paddingEnd="8dp"/>


				<androidx.appcompat.widget.AppCompatImageView
					android:id="@+id/sign_up_address_my_location"
					android:layout_width="27dp"
					android:layout_height="32dp"
					android:paddingEnd="5dp"
					android:paddingRight="5dp"
					tools:ignore="RtlSymmetry"
					android:layout_weight="0"
					android:src="@drawable/ic_my_location"
					android:layout_gravity="center_vertical|end"/>

				<androidx.appcompat.widget.AppCompatImageView
					android:id="@+id/sign_up_address_map"
					android:layout_width="27dp"
					android:layout_height="32dp"
					android:paddingEnd="5dp"
					android:paddingRight="5dp"
					android:layout_weight="0"
					tools:ignore="RtlSymmetry"
					android:src="@drawable/ic_map"
					android:layout_gravity="center_vertical|end" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="28dp"
				android:layout_marginBottom="12dp"
				android:orientation="horizontal"
				android:background="@drawable/edit_text_login">

				<TextView
					android:id="@+id/sign_up_label_phone"
					android:text="@string/login_phone"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/TextView.Service"
					android:layout_marginStart="8dp"
					android:layout_marginLeft="8dp"/>

				<EditText
					android:id="@+id/sign_up_phone"
					android:hint="@string/login_phone_hint"
					android:autofillHints="@string/autofill_phone"
					android:inputType="phone"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					style="@style/EditText.Login"
					android:paddingStart="8dp"
					android:paddingEnd="8dp"/>
			</LinearLayout>

			<FrameLayout
				android:animateLayoutChanges="true"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<Button
					android:id="@+id/sign_up"
					android:background="@null"
					style="?android:attr/borderlessButtonStyle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:textColor="@color/colorLightGrey"
					android:text="@string/sign_up"/>

				<ProgressBar
					android:id="@+id/sign_up_progress"
					android:visibility="invisible"
					android:layout_width="match_parent"
					android:layout_height="match_parent" />
			</FrameLayout>
		</LinearLayout>

		<LinearLayout
			android:visibility="gone"
			android:id="@+id/login_layout_bottom_up"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom"
			android:orientation="horizontal"
			android:gravity="center_horizontal">

			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/login_in_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/colorLightGrey"
				android:text="@string/login_in_text"/>

			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/login_in_btn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/colorLightGrey"
				android:text="@string/login_in_btn"/>
		</LinearLayout>
	</FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>